Detail page commits

--- a/detalle-blog.html
+++ b/detalle-blog.html
@@ -31,6 +31,53 @@
             </section>
         </nav>
     </header>
+
+    <main class="details-main">
+        <section class="grid-container details-main-img-container">
+            <img src="/assets/img/main-news-img.png" alt="">
+        </section>
+        <section class="details-main-new">
+            <div>
+                <p>Noticias</p>
+            </div>
+            <div>
+                <p>Título del Blogspost</p>
+            </div>
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita fuga corporis rem sapiente
+                    voluptatibus vitae, necessitatibus est dolor nemo obcaecati nisi. Esse illum fuga placeat beatae,
+                    tempora voluptatum tenetur optio. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum
+                    alias, dolores incidunt tempora quae, officiis voluptatibus amet aut autem ducimus sunt laborum,
+                    iure voluptatem quasi sed? Consectetur omnis ad ipsa. Lorem ipsum dolor sit, amet consectetur
+                    adipisicing elit. Eaque ipsa voluptas earum! Consectetur possimus in quidem pariatur numquam nobis
+                    quo fugit facere quibusdam tempore obcaecati illo molestias nostrum, minima similique. Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Quas magni officia accusamus eveniet rem? Iusto
+                    nesciunt obcaecati neque blanditiis velit tenetur consequatur tempore, cumque, natus eveniet
+                    adipisci ipsum molestiae consequuntur. Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Harum molestiae ut recusandae tenetur odio sapiente repudiandae perferendis, possimus, modi, nam
+                    deleniti aspernatur saepe aliquid ducimus eos explicabo quod. Voluptate, quia.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus beatae perferendis fugiat
+                    laudantium autem asperiores aspernatur illum culpa, maxime impedit? Ratione nulla tenetur sunt
+                    cupiditate ea neque et maiores officiis!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque dolorem sint similique id alias,
+                    eaque tempora? Et doloribus nemo, pariatur quis nam sequi nesciunt vero, ab voluptatum, molestias
+                    voluptatibus? Adipisci. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, recusandae
+                    qui! Labore consectetur fuga iste dignissimos, vel repellat voluptatum reprehenderit eligendi
+                    dolores? Cum iusto voluptatem dolore delectus quisquam minima debitis. Lorem ipsum dolor, sit amet
+                    consectetur adipisicing elit. Reprehenderit nesciunt eligendi atque quod deserunt totam quis modi
+                    illo autem quidem, reiciendis blanditiis officiis eius commodi beatae recusandae dolore obcaecati
+                    fugit?</p>
+            </div>
+        </section>
+    </main>
+
+    <section class="profile-news-container">
+
+    </section>
+
+    <footer>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+    </footer>
 </body>
 
 </html>
