--- a/detalle-blog.html
+++ b/detalle-blog.html
@@ -38,10 +38,10 @@
         </section>
         <section class="details-main-new">
             <div>
-                <p>Noticias</p>
+                <h3>Noticias</h3>
             </div>
             <div>
-                <p>Título del Blogspost</p>
+                <h2>Título del Blogspost</h2>
             </div>
             <div>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Expedita fuga corporis rem sapiente
@@ -72,7 +72,26 @@
     </main>
 
     <section class="profile-news-container">
-
+        <div class="profile-info-container-new">
+            <div class="profile-info-container-img">
+                <div class="sub-columnas">
+                    <img src="/assets/img/013-newsletter.png" alt="">
+                    <div class="sub-filas">
+                        <h4>Contacto</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-info-container-img">
+                <div class="sub-columnas">
+                    <img src="/assets/img/006-like.png" alt="">
+                    <div class="sub-filas">
+                        <h4>Escribe</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
