--- a/perfil.html
+++ b/perfil.html
@@ -73,7 +73,26 @@
     </section>
 
     <section class="profile-news-container">
-
+        <div class="profile-info-container-new">
+            <div class="profile-info-container-img">
+                <div class="sub-columnas">
+                    <img src="/assets/img/013-newsletter.png" alt="">
+                    <div class="sub-filas">
+                        <h4>Contacto</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="profile-info-container-img">
+                <div class="sub-columnas">
+                    <img src="/assets/img/006-like.png" alt="">
+                    <div class="sub-filas">
+                        <h4>Escribe</h4>
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <footer>
